logo and menu changes

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,27 +1,24 @@
 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-    <!-- Sidebar Toggle (Topbar) -->
-    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-      <i class="fa fa-bars"></i>
-    </button>
-  
-    <!-- Topbar Navbar -->
-    <ul class="navbar-nav ml-auto">
-  
-  
-      <!-- Nav Item - User Information -->
-      <li class="nav-item dropdown no-arrow">
-        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-            Welcome Admin</span>
+  <!-- Topbar Navbar -->
+  <ul class="navbar-nav ml-auto">
+    <!-- Nav Item - User Information -->
+    <li class="nav-item dropdown no-arrow">
+      <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
+        (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseProject">
+        <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+          <h6>
+            Welcome Admin
+          </h6>
+        </span>
+      </a>
+      <!-- Dropdown - User Information -->
+      <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+        <a class="dropdown-item" href="javascript:void(0)">
+          <fa-icon [icon]="faSignOut"></fa-icon> Logout
         </a>
-        <!-- Dropdown - User Information -->
-        <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-            Logout
-          </a>
-        </div>
-      </li>
-    </ul>
-  </nav>
+      </div>
+    </li>
+  </ul>
+
+</nav>
