--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -77,6 +77,19 @@
         </div>
     </li>
 
+   <!-- Divider -->
+   <hr class="sidebar-divider">
+
+   <!-- Nav Item - Charts -->
+   <li class="nav-item">
+    <a class="nav-link" href="javascript:void(0)" routerLink="CompanyExpenses">
+        <fa-icon [icon]="faMoney"></fa-icon>
+        <span>
+            Company Expenses
+        </span>
+    </a>
+</li>
+
     <!-- Divider -->
     <hr class="sidebar-divider">
 
