--- a/src/app/admin/pages/employee-project/employee-project.component.html
+++ b/src/app/admin/pages/employee-project/employee-project.component.html
@@ -6,3 +6,97 @@
 </div>
 
 <!-- Content Row -->
+<div class="card shadow mb-4">
+    <div *ngIf="isShown">
+        <div class="card-header py-3">
+            <h5 class="m-0 font-weight-bold text-primary"> Employee Project List </h5>
+        </div>
+        <div class="card-body">
+            <div class="row mrgn-btm-15">
+                <div class="col-lg-12 algn-right">
+                    <button class="btn btn-primary btn-sm" (click)="addEmployeeProject()"> Add Employee Project</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col">Employee Name</th>
+                                <th scope="col">Project Name</th>
+                                <th scope="col">Assigned Date</th>
+                                <th class="action-button">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor=" let  employeeProject of  employeeprojectlist">
+                                <td>{{employeeProject.name}} </td>
+                                <td>{{employeeProject.project}}</td>
+                                <td>{{ employeeProject.date}} </td>
+                                <td class="action-button">
+                                    <a href="javascript:void(0)" ngbTooltip="Edit">
+                                        <fa-icon [icon]="faEdit"></fa-icon>
+                                    </a>
+                                    <a href="javascript:void(0)" ngbTooltip="Delete">
+                                        <fa-icon [icon]="faDelete"></fa-icon>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="card shadow mb-4">
+    <div *ngIf="!isShown">
+        <div class="card-header py-3">
+            <h5 class="m-0 font-weight-bold text-primary">Add Employee Project </h5>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+            <form class="form-horizontal">
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="employee">Employee</label>
+                        <select name="employee" class="form-select col-lg-12"
+                            (change)="onEmployeeChange($event.target)">
+                            <option *ngFor="let employee of employees" [value]="employee.id">{{ employee.name }}
+                            </option>
+                        </select>
+                    </div>
+                      <div class="form-group col-lg-6">
+                        <label for="project">Project</label>
+                        <select name="project" class="form-select col-lg-12" (change)="onProjectChange($event.target)">
+                            <option *ngFor="let project of projects" [value]="project.id">{{ project.name }}
+                            </option>
+                        </select>
+                </div>
+        </div>
+
+
+
+        <div class="row">
+            <div class="form-group col-lg-6">
+                <label for="assignedDate">Assigned Date </label>
+                <div class="input-group">
+                    <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker #d="ngbDatepicker"
+                        id="paymentDate" mask="00/00/0000" autocomplete="off">
+                    <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+                </div>
+            </div>
+
+            <div class="row submit-buttons">
+                <div class="form-group col-lg-12">
+                    <input type="submit" class="btn btn-success" value="Save" />
+                    <input type="button" class="btn btn-outline-primary" value="Cancel" (click)="isShown = true" />
+                </div>
+            </div>
+        </div>
+        </form>
+    </div>
+</div>
