--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="sidebar-brand-text mx-3">
             <h4>
-              <span class="logo-red">Tech</span><span class="logo-purple">Matys</span>  
+                <span class="logo-red">Tech</span><span class="logo-purple">Matys</span>
             </h4>
         </div>
     </a>
@@ -77,18 +77,18 @@
         </div>
     </li>
 
-   <!-- Divider -->
-   <hr class="sidebar-divider">
+    <!-- Divider -->
+    <hr class="sidebar-divider">
 
-   <!-- Nav Item - Charts -->
-   <li class="nav-item">
-    <a class="nav-link" href="javascript:void(0)" routerLink="CompanyExpenses">
-        <fa-icon [icon]="faMoney"></fa-icon>
-        <span>
-            Company Expenses
-        </span>
-    </a>
-</li>
+    <!-- Nav Item - Charts -->
+    <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" routerLink="CompanyExpenses">
+            <fa-icon [icon]="faMoney"></fa-icon>
+            <span>
+                Company Expenses
+            </span>
+        </a>
+    </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider">
@@ -98,6 +98,17 @@
         <a class="nav-link" href="javascript:void(0)" routerLink="User">
             <fa-icon [icon]="faUser"></fa-icon>
             <span>Users</span>
+        </a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Nav Item - Charts -->
+    <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" routerLink="Report">
+            <fa-icon [icon]="faFile"></fa-icon>
+            <span>Report</span>
         </a>
     </li>
 </ul>
