--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -77,9 +77,9 @@
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="name">Name*</label>
-                        <input class="form-control" type="text" id="name" placeholder="Name"
-                            autocomplete="off" maxlength="100" formControlName="name" 
-                            [ngClass]="{ 'is-invalid': submitted && f['name'].errors }">                        
+                        <input class="form-control" type="text" id="name" placeholder="Name" autocomplete="off"
+                            maxlength="100" formControlName="name"
+                            [ngClass]="{ 'is-invalid': submitted && f['name'].errors }">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="amount">Amount</label>
@@ -121,6 +121,37 @@
                             <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                 type="button"></button>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label class="custom-file-upload">
+                            <input type="file" />
+                            Upload Files
+                        </label>
+
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th scope="col">File Name</th>
+                                    <th class="action-button">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let file of uploadedFiles">
+                                    <td>{{file.name}}</td>
+                                    <td class="action-button">
+                                        <a href="javascript:void(0)" ngbTooltip="Edit">
+                                            <fa-icon [icon]="faEdit"></fa-icon>
+                                        </a>
+                                        <a href="javascript:void(0)" ngbTooltip="Delete">
+                                            <fa-icon [icon]="faDelete"></fa-icon>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
 
