--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11356,3 +11356,15 @@ thead {
   color: #572f92;
   font-weight: bold;
 }
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  border: 1px solid #ccc;
+  padding: 6px 12px;
+  cursor: pointer;
+  float: right;
+  color: #fff;
+  background-color: #4e73df;
+}
