--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11295,7 +11295,7 @@ thead {
 
 .submit-buttons input[type="submit"], input[type="button"] {
   margin-right: 10px;
-  width:100px;
+  min-width:100px;
 }
 
 .mrgn-btm-5 {
