Updated User works

--- a/src/app/admin/pages/user/user.component.html
+++ b/src/app/admin/pages/user/user.component.html
@@ -29,7 +29,7 @@
                                 <th scope="col">User Name</th>
                                 <th scope="col">Role</th>
                                 <th scope="col">Status</th>
-                                <th scope="col">Create Date </th>
+                                <th scope="col">Created Date </th>
                                 <th class="action-button">Action</th>
                             </tr>
                         </thead>
@@ -45,7 +45,7 @@
                                     {{ user.status}}
                                 </td>
                                 <td>
-                                    {{ user.createDate}}
+                                    {{ user.createdDate}}
                                 </td>
 
                                 <td class="action-button">
