--- a/src/app/admin/pages/user/user.component.html
+++ b/src/app/admin/pages/user/user.component.html
@@ -26,7 +26,7 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th scope="col">User Name</th>
+                                <th scope="col">Name</th>
                                 <th scope="col">Role</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Created Date </th>
@@ -36,7 +36,7 @@
                         <tbody>
                             <tr *ngFor="let user of userlist">
                                 <td>
-                                    {{user.userName}}
+                                    {{user.name}}
                                 </td>
                                 <td>
                                     {{user.role}}
