minor changes in profile

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -15,7 +15,8 @@
       <!-- Dropdown - User Information -->
       <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
       
-        <a class="dropdown-item"  href="#" routerLink="Profile"  >Profile</a>
+        <a class="dropdown-item"  href="#" routerLink="Profile"  ><fa-icon [icon]="faProfile"></fa-icon> 
+          Profile</a>
       
       
         <a class="dropdown-item" href="javascript:void(0)">
