--- a/src/app/admin/pages/profile/profile.component.html
+++ b/src/app/admin/pages/profile/profile.component.html
@@ -50,19 +50,19 @@
             <div class="row">
                 <div class="form-group col-lg-6">
                     <label for="Password">Password* </label>
-                    <input type="password" class="form-control" autocomplete="off" maxlength="20">
+                    <input type="password" class="form-control" placeholder="XXXXXXXX" autocomplete="off" maxlength="15">
                 </div>
 
                 <div class="form-group col-lg-6">
                     <label for="confirmPassword"> Confirm Password* </label>
-                    <input type="password" class="form-control" autocomplete="off" maxlength="20">
+                    <input type="password" class="form-control" placeholder="XXXXXXXX" autocomplete="off" maxlength="15">
                 </div>
             </div>
 
             <div class="row submit-buttons">
                 <div class="form-group col-lg-12">
                     <input type="submit" class="btn btn-success" value="Save" />
-                    <input type="button" class="btn btn-outline-primary" value="Reset" (click)="isShown = true" />
+                    <input type="button" class="btn btn-outline-primary" value="Reset"  />
                 </div>
             </div>
         </form>
