--- a/src/app/admin/pages/report/report.component.html
+++ b/src/app/admin/pages/report/report.component.html
@@ -37,7 +37,7 @@
             <div class="row submit-buttons">
                 <div class="form-group col-lg-12">
                     <input type="button" class="btn btn-success" value="Dowload Pdf" />
-                    <input type="button" class="btn btn-outline-primary" value="Download Excel" />
+                    <input type="button" class="btn btn-primary" value="Download Excel" />
                 </div>
             </div>
         </form>
