--- a/src/app/admin/pages/profile/profile.component.html
+++ b/src/app/admin/pages/profile/profile.component.html
@@ -19,8 +19,8 @@
 
             <div class="row">
                 <div class="form-group col-lg-6">
-                    <label for="Email">Email* </label>
-                    <input type="text" class="form-control" placeholder="Email" maxlength="20" autocomplete="off" >
+                    <label for="emailAddress">Email Address* </label>
+                    <input type="text" class="form-control" placeholder="Email Address" maxlength="20" autocomplete="off" >
                 </div>
 
                 <div class="form-group col-lg-6">
