--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -32,7 +32,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-bordered">
+                    <table datatable [dtOptions]="dtOptions"  class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Expense Name</th>
