--- a/src/app/admin/pages/employee-project/employee-project.component.html
+++ b/src/app/admin/pages/employee-project/employee-project.component.html
@@ -20,7 +20,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-bordered">
+                    <table datatable [dtOptions]="dtOptions"  class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Employee Name</th>
