--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table datatable [dtOptions]="dtOptions"  class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Name</th>
