--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-bordered">
+                    <table datatable [dtOptions]="dtOptions"  class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Project Name</th>
