--- a/src/app/admin/pages/generate-invoice/generate-invoice.component.html
+++ b/src/app/admin/pages/generate-invoice/generate-invoice.component.html
@@ -1,1 +1,196 @@
-<p>generate-invoice works!</p>
+<!--Page Title-->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">
+        Invoice List
+    </h1>
+</div>
+
+<!-- Content Row -->
+
+<div class="card shadow mb-4">
+    <div *ngIf="isShown">
+        <div class="card-header py-3">
+            <h5 class="m-0 font-weight-bold text-primary">Invoice List</h5>
+        </div>
+        <div class="card-body">
+            <div class="row mrgn">
+                <div class="col-lg-12 algn-right">
+                    <button class="btn btn-primary btn-sm" (click)="genrateInvoice()">
+                        Genrate Invoice</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col">Title</th>
+                                <th scope="col">Created By</th>
+                                <th scope="col">Genrate Date</th>
+                                <th class="action-button">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let genrateInvoice of genrateInvoiceList">
+                                <td>{{genrateInvoice.title}}</td>
+                                <td>{{genrateInvoice.createdBy}}</td>
+                                <td>{{genrateInvoice.genrateDate}}</td>
+
+                                <td class="action-button">
+                                    <a href="javascript:void(0)" ngbTooltip="Download">
+                                        <fa-icon [icon]="faDownload"></fa-icon>
+                                    </a>
+                                    <a href="javascript:void(0)" ngbTooltip="Delete">
+                                        <fa-icon [icon]="faDelete"></fa-icon>
+                                    </a>
+                                    <a href="javascript:void(0)" ngbTooltip="View">
+                                        <fa-icon [icon]="faEye"></fa-icon>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card shadow mb-4">
+    <div *ngIf="!isShown">
+        <div class="card-header py-3">
+            <h5 class="m-0 font-weight-bold text-primary">Genrate Invoice </h5>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-4">
+                    <label for="lastNname">Title*</label>
+                    <input class="form-control" type="text" id="title" placeholder="Title" autocomplete="off"
+                        maxlength="100">
+                </div>
+            </div>
+            <div class="row mrgn-btm-15">
+                <div class="col-lg-10">
+                </div>
+
+                <div class="col-lg-2 algn-right">
+                    <input type="button" class="btn btn-success" value="Preview" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 card shadow">
+                    <table>
+                        <tr>
+                            <td>
+                                TechMatys
+                            </td>
+                            <td>
+                                hello@techmatys.com <br>
+                                Dehradun, India
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                BILLING INVOICE
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <span>Date </span>
+                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                    autocomplete="off" maxlength="100">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <span>Invoice # </span>
+                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                    autocomplete="off" maxlength="100">
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td colspan="2">
+                                <input type="button" class="btn btn-success" value="Add new Item" />
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td colspan="2">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Description
+                                            </th>
+                                            <th>
+                                                Qty
+                                            </th>
+                                            <th>
+                                                Unit Price
+                                            </th>
+                                            <th>
+                                                Amount
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+
+                                            </td>
+                                            <td>
+
+                                            </td>
+                                            <td>
+
+                                            </td>
+                                            <td>
+
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <span>Bill To</span>
+                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                    autocomplete="off" maxlength="100">
+                            </td>
+                            <td>
+                                <span>SUBTOTAL</span>
+                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                    autocomplete="off" maxlength="100">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <span>TAX</span>
+                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                    autocomplete="off" maxlength="100">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <span>TOTAL</span>
+                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                    autocomplete="off" maxlength="100">
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <div class="row submit-buttons">
+                <div class="form-group col-lg-12">
+                    <input type="submit" class="btn btn-success" value="Save" />
+                    <input type="button" class="btn btn-outline-primary" value="Cancel" (click)="isShown = true" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
