--- a/src/app/admin/pages/generate-invoice/generate-invoice.component.html
+++ b/src/app/admin/pages/generate-invoice/generate-invoice.component.html
@@ -1,7 +1,7 @@
 <!--Page Title-->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">
-        Invoice List
+        Invoice
     </h1>
 </div>
 
@@ -13,7 +13,7 @@
             <h5 class="m-0 font-weight-bold text-primary">Invoice List</h5>
         </div>
         <div class="card-body">
-            <div class="row mrgn">
+            <div class="row mrgn-btm-15">
                 <div class="col-lg-12 algn-right">
                     <button class="btn btn-primary btn-sm" (click)="generateInvoice()">
                         Generate Invoice</button>
@@ -22,20 +22,27 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-bordered">
+                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Title</th>
                                 <th scope="col">Created By</th>
-                                <th scope="col">Generate Date</th>
+                                <th scope="col">Generated Date</th>
                                 <th class="action-button">Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let generateInvoice of generateInvoiceList">
-                                <td>{{generateInvoice.title}}</td>
-                                <td>{{generateInvoice.createdBy}}</td>
-                                <td>{{generateInvoice.generateDate}}</td>
+                                <td>
+                                    {{generateInvoice.title}}
+                                </td>
+                                <td>
+                                    {{generateInvoice.createdBy}}
+
+                                </td>
+                                <td>
+                                    {{generateInvoice.generatedDate}}
+                                </td>
 
                                 <td class="action-button">
                                     <a href="javascript:void(0)" ngbTooltip="Download">
@@ -185,7 +192,7 @@
                 </div>
             </div>
 
-            <div class="row submit-buttons">
+            <div class="row submit-buttons mrgn-top-15">
                 <div class="form-group col-lg-12">
                     <input type="submit" class="btn btn-success" value="Save" />
                     <input type="button" class="btn btn-outline-primary" value="Cancel" (click)="isShown = true" />
