--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -29,7 +29,7 @@
                                 <th scope="col">Project Name</th>
                                 <th scope="col">Start Date</th>
                                 <th scope="col">Status</th>
-                                <th scope="col">Project Type </th>
+                                <th scope="col">Technology </th>
                                 <th class="action-button">Action</th>
                             </tr>
                         </thead>
@@ -45,7 +45,7 @@
                                     {{ project.status}}
                                 </td>
                                 <td>
-                                    {{ project.type}}
+                                    {{ project.technology}
                                 </td>
 
                                 <td class="action-button">
@@ -113,14 +113,6 @@
                 </div>
 
                 <div class="row">
-                    <div class="form-group col-lg-4">
-                        <label for="project type">Project Type </label>
-                        <select name="projectType" class="form-select col-lg-12"
-                            (change)="onProjectChange($event.target)">
-                            <option *ngFor="let type of types" [value]="type.id">{{ type.name }}</option>
-                        </select>
-                    </div>
-
                     <div class="form-group col-lg-4">
                         <label for="duration">Duration </label>
                         <select name="duration" class="form-select col-lg-12"
