--- a/src/app/admin/pages/generate-invoice/generate-invoice.component.html
+++ b/src/app/admin/pages/generate-invoice/generate-invoice.component.html
@@ -87,45 +87,52 @@
 
             <div class="row">
                 <div class="col-lg-12 card shadow">
-                    <table>
+                    <table style="margin-bottom: 15px;">
                         <tr>
                             <td>
                                 TechMatys
                             </td>
-                            <td>
+                            <td style="text-align: right;">
                                 hello@techmatys.com <br>
                                 Dehradun, India
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2">
+                            <td colspan="2" style="text-align: center;">
                                 BILLING INVOICE
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2">
+                            <td>
+                            </td>
+                            <td style="width: 10%;">
                                 <span>Date </span>
                                 <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100">
+                                    autocomplete="off" maxlength="100" style="width: 150px;">
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2">
+                            <td>
+
+                            </td>
+                            <td style="width: 10%;">
                                 <span>Invoice # </span>
                                 <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100">
+                                    autocomplete="off" maxlength="100" style="width: 150px;">
                             </td>
                         </tr>
 
                         <tr>
-                            <td colspan="2">
+                            <td>
+                            </td>
+                            <td style="width: 10%;">
                                 <input type="button" class="btn btn-success" value="Add new Item" />
                             </td>
                         </tr>
 
                         <tr>
                             <td colspan="2">
-                                <table>
+                                <table class="table">
                                     <thead>
                                         <tr>
                                             <th>
@@ -145,16 +152,23 @@
                                     <tbody>
                                         <tr>
                                             <td>
+                                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                                    autocomplete="off" maxlength="100">
+                                            </td>
+                                            <td>
+                                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                                    autocomplete="off" maxlength="100">
 
                                             </td>
                                             <td>
+                                                <input class="form-control" type="text" id="title" placeholder="Title"
+                                                    autocomplete="off" maxlength="100">
 
                                             </td>
                                             <td>
-
-                                            </td>
-                                            <td>
-
+                                                <label>
+                                                    10000
+                                                </label>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -163,29 +177,35 @@
                         </tr>
 
                         <tr>
-                            <td>
+                            <td style="width: 50%;">
                                 <span>Bill To</span>
                                 <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100">
+                                    autocomplete="off" maxlength="100" width="150px">
                             </td>
                             <td>
                                 <span>SUBTOTAL</span>
                                 <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100">
+                                    autocomplete="off" maxlength="100" width="150px">
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2">
-                                <span>TAX</span>
+                            <td>
+
+                            </td>
+                            <td style="width: 10%;">
+                                <span>Tax </span>
                                 <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100">
+                                    autocomplete="off" maxlength="100" style="width: 150px;">
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2">
-                                <span>TOTAL</span>
+                            <td>
+
+                            </td>
+                            <td style="width: 10%;">
+                                <span>Total </span>
                                 <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100">
+                                    autocomplete="off" maxlength="100" style="width: 150px;">
                             </td>
                         </tr>
                     </table>
