--- a/src/app/admin/pages/user/user.component.html
+++ b/src/app/admin/pages/user/user.component.html
@@ -98,12 +98,12 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="form-group col-lg-12">
-                        <label for="screenPermission">Screen Permission</label>
-                    </div>
+                <div class="row mrgn-top-15">
                     <div class="card shadow ">
                         <div class="row">
+                            <div class="card-header py-3" style="text-align: center;">
+                                <h5 class="m-0 font-weight-bold text-primary">Screen Permission </h5>
+                            </div>
                             <div class="form-group col-lg-12 mb-4 mrgn-top-15">
                                 <strong>Employee </strong>
                                 <div>
